# vm

./: README.md
add/: Makefile  README.md  adder.c  lambda1.py  lambda2.py
basal0/: Makefile  README.md  TINY.md  asm.py  build.sh  compiler.py  lexer.py  macro.py  parse.py  sample.bas  tok.py
chip8/: README.md
chip8/chip8/: .gitignore  CMakeLists.txt  LICENSE  README.md
chip8/chip8/src/: Chip8State.c  Chip8State.h  decoder.c  decoder.h  main.c
cmp1/: Makefile  README.md  cmp1.c
cmp2/: Makefile  README.md  par1.c  sample1.pas  sample2.pas  sample3.pas  sample4.pas  sample5.pas  scan.c
cmp3/: Makefile  README.md  cmp3.c  par2.c  sample.p  scan.c  scan.h
cmp4/: Makefile  README.md  asm.py  check.py  cmp4.c  cmp4.h  compile.sh  error.c  error.h  runvm.c  sample.p  scan.c  scan.h  vm4.c  vm4.h
debug/: ED.md  README.md  asm.py  callret.b  diff.py  disasm.py  disasm.sh  dvm.py  dvm.sh  dvmtest.py  ed.py  ed.sh  ed2.py  ed2.sh  fact.b  log.html  log.txt  playlog.html  sample.b  sample.d  trad.txt  viewlog.html
enkel0/: COMP.md  LANG.md  Makefile  README.md  VM.md  asm.py  compile.sh  enkel.c  enkel.h  error.c  error.h  runvm.c  sample.p  scan.c  scan.h  strip.py  symbol.c  symbol.h  vmenkel.c  vmenkel.h
jvm1/: Add.java  Mul.java  README.md  classread-constant-pool.py  classread-sample.py  classread.py  javap-sample.txt
jvm2/: README.md  classread.py  main.py
jvm4/: README.md
metcalfe/: README.md  calfe.py  etf.mc  etf.sh  etf.test  met.py  nontrivial.mc  nontrivial.sh  nontrivial.test  small.mc  small.sh  small.test  trivial.mc  trivial.sh  (+1 more)
vm4/: c.sh  (+9 more)
(+66 files in other folders)
